Project revamp to work with RMarkdown v2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,17 @@
 export(courseR.build)
 export(courseR.init)
+export(fixPartialsMarkup)
+export(linkData)
+export(renderWhisker)
+export(responsiveImages)
+export(trimText)
+import(XML)
+import(compare)
+import(digest)
+import(plyr)
+import(rmarkdown)
+import(selectr)
+import(shiny)
+import(tools)
+import(whisker)
+import(yaml)
