--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,24 @@
 Package: courseR
 Type: Package
-Title: Generate linked handout-style and presentation-style pages from literate
-    knitr markdown source.
-Version: 0.2
-Date: 2014-03-26
+Title: R Markdown build tool for generation course websites
+Description: Build complete websites with multiple output formats from a common
+    set of R markdown sources.  Useful for creating class websites with linked
+    handout-style webpages and HTML presentations.
+Version: 0.3
+Date: 2014-04-16
 Author: Gregg Whitworth
 Maintainer: Gregg Whitworth <whitwort@gmail.com>
-Description: https://github.com/whitwort/courseR
-License: LGPLv3
+URL: http://github.com/whitwort/courseR
+Imports:
+    digest,
+    tools,
+    rmarkdown,
+    yaml,
+    whisker,
+    plyr,
+    compare,
+    shiny,
+    XML,
+    selectr
+SystemRequirements: pandoc (>= 1.12.3)
+License: GPL-3
