added manifest() to API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build)
 export(fixPartialsMarkup)
 export(init)
 export(linkData)
+export(manifest)
 export(renderWhisker)
 export(responsiveImages)
 export(trimText)
