init, update and new content creation functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ URL: http://github.com/whitwort/courseR
 BugReports: http://github.com/whitwort/courseR/issues
 VignetteBuilder: knitr
 Imports:
+  revealjs,
+  whisker
 SystemRequirements: pandoc (>= 1.12.3)
 License: GPL-3
 RoxygenNote: 5.0.1
