--- a/inst/project-template/templates/init/courseR.yml
+++ b/inst/project-template/templates/init/courseR.yml
@@ -1,15 +1,12 @@
 # Paths relative to the current working directory where build() expects to find things
 paths:
   
-  # md and rmd files in content are compiled to html pages and slides
-  content: content
-  
-  # rmd files in assignments are compiled to assignment rmd and solution html files
-  assignments: assignments
-  
   # link content/assignments to data files with the `data: ` header.  Students 
   # get local copies of data files when they start assignments.
   data: data
+  
+  # location for final build targets
+  dist: dist
   
 # courseR makes extensive use of whisker (mustache) templates
 templates:
@@ -35,13 +32,13 @@ build:
 
   # Set `package: false` to skip building a course package
   package: 
-    dist: dist/{{name}}
+    dist: {{name}}
     name: {{name}}
   
   # Set `site: false` to skip building the website
   site:
     build:        build       # temporary build path for intermediate rmds
-    dist:         dist/www
+    dist:         www
     max-chars:    144         # removes blocks of text from slides; set to false to disable
     url:          http://localhost/{{name}} # no trailing slash
 
