near (incomplete) implementations for the first live days of the dependant site biol-185

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Imports:
   yaml,
   rmarkdown,
   devtools, 
-  roxygen2
+  roxygen2,
+  xml2,
+  rvest
 SystemRequirements: pandoc (>= 1.12.3)
 License: GPL-3
 RoxygenNote: 5.0.1
