--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(init)
 export(newAssignment)
 export(newContent)
 export(renderTable)
+export(solution)
 export(startAssignment)
 export(submitAssignment)
-export(taskCollector)
 export(update)
