API additions; loads of bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(checkAssignment)
 export(checkAssignments)
 export(createTable)
 export(init)
+export(listAssignments)
 export(newAssignment)
 export(newContent)
 export(renderTable)
@@ -13,4 +14,5 @@ export(solution)
 export(startAssignment)
 export(submitAssignment)
 export(update)
+export(website)
 import(shiny)
