--- a/inst/project-template/templates/init/courseR.yml
+++ b/inst/project-template/templates/init/courseR.yml
@@ -41,4 +41,4 @@ build:
 # Course-specific configuration options; these change the default view for the 
 # assignments shiny app.
 instructor-users: "*"
-student-users: "*"       # * skips the user name check and shows studentui
+student-users: "*"       # * skips the user name check and always shows studentui
