firt pass at back-porting experimental extensions from Bio-185 2017.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ export(assignment)
 export(build)
 export(checkAssignment)
 export(checkAssignments)
+export(clean)
 export(createTable)
 export(init)
 export(listAssignments)
 export(newAssignment)
 export(newContent)
+export(publish)
+export(publishApp)
 export(renderTable)
 export(solution)
 export(startAssignment)
