--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,18 @@ export(assignment)
 export(build)
 export(checkAssignment)
 export(checkAssignments)
+export(check_cols)
+export(check_final)
+export(check_rows)
 export(clean)
 export(createTable)
+export(includeTable)
 export(init)
 export(listAssignments)
 export(newAssignment)
 export(newContent)
 export(publish)
 export(publishApp)
-export(renderTable)
 export(solution)
 export(startAssignment)
 export(submitAssignment)
