--- a/inst/project-template/templates/package/DESCRIPTION
+++ b/inst/project-template/templates/package/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Gregg Whitworth
 Maintainer: Gregg Whitworth <whitwort@gmail.com>
 URL: http://github.com/whitwort/courseR
 BugReports: http://github.com/whitwort/courseR/issues
-Description: This package provides wrapper functions to courseR bound to a course build.
+Description: This package provides wrapper functions to courseR that are bound to a specific course build.
 Imports: courseR
 Depends: R (>= 3.3.2)
 RoxygenNote: 6.0.1
