upstream bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_cols)
 export(check_final)
 export(check_rows)
 export(clean)
+export(copyErrorLogs)
 export(createTable)
 export(includeTable)
 export(init)
